CMMP/test/ValidPrograms/5_7_2.c
#include<inttypes.h>
#include<stdio.h>
void main(void){
    char alpha = 'a';
    while(alpha <= 'z'){
        putchar(alpha++);
    }
    putchar('\n');
}
