CMMP/test/SemanticError/06_IncompatibleTypes.c
void main() {
    int64_t a = 2;
    int32_t b;
    b=a;
}
